# trading-system

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml  ruff.toml
.claude/: settings.json
.codex/: hooks.json
apps/trader/: config.toml  main.py  pyproject.toml
apps/trader/src/trading_app/: __init__.py  assembly.py  cli.py  config.py  scan_report.py  watchdog.py
apps/trader/tests/: test_assembly.py  test_cli.py  test_config.py  test_scan.py  test_watchdog.py
docs/: 2026-06-08-deep-research-tws-options-system.md  HANDOFF.md
docs/superpowers/plans/: 2026-06-05-phase1-workspace-core.md  2026-06-05-phase2-data-layer.md  2026-06-05-phase3-trading-logic.md  2026-06-05-phase4a-backtest-engine.md  2026-06-05-phase4b-live-trading-path.md  2026-06-08-assignment-rolling.md  2026-06-08-dynamic-strike-selection.md  2026-06-08-expand-option-strategies.md  2026-06-08-greeks-position-management.md  2026-06-08-iv-rank-entry.md  2026-06-10-live-path-hardening.md  2026-06-12-swing-scanner.md
docs/superpowers/specs/: 2026-06-04-tws-monorepo-design.md  2026-06-08-assignment-rolling-design.md  2026-06-08-dynamic-strike-selection-design.md  2026-06-08-greeks-position-management-design.md  2026-06-08-iv-rank-entry-design.md  2026-06-08-options-strategy-handoff.md  2026-06-10-live-path-hardening-design.md  2026-06-12-swing-scanner-design.md
scripts/githooks/: pre-commit
