[project]
name = "trading-app"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "backtest",
    "execution",
    "market-data",
    "pydantic>=2.0",
    "risk",
    "storage",
    "strategy",
    "trading-core",
    "tws-client",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/trading_app"]

[tool.uv.sources]
backtest = { workspace = true }
execution = { workspace = true }
market-data = { workspace = true }
risk = { workspace = true }
storage = { workspace = true }
strategy = { workspace = true }
trading-core = { workspace = true }
tws-client = { workspace = true }
